@@ -5,7 +5,13 @@ import com.ctrip.xpipe.redis.core.AbstractRedisTest;
 import com.ctrip.xpipe.redis.core.entity.*;
 import com.ctrip.xpipe.redis.core.meta.MetaException;
 import com.ctrip.xpipe.redis.core.meta.XpipeMetaManager;
+import com.ctrip.xpipe.redis.core.route.RouteChooseStrategy;
+import com.ctrip.xpipe.redis.core.route.RouteChooseStrategyFactory;
+import com.ctrip.xpipe.redis.core.route.impl.Crc32HashRouteChooseStrategy;
 import com.ctrip.xpipe.tuple.Pair;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
+import org.assertj.core.util.Maps;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -23,6 +29,7 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 	private DefaultXpipeMetaManager metaManager;
 
 	private String dc = "jq", clusterId1 = "cluster1", clusterId2 = "cluster2", shardId = "shard1";
+	private String clusterHeteroId1 = "cluster-hetero1";
 	@SuppressWarnings("unused")
 	private String dcBak1 = "fq", dcBak2 = "fra";
 
@@ -34,50 +41,25 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 	}
 
 	@Test
-	public void testMetaRoutes(){
+	public void testMetaRoutes() {
 
 		List<RouteMeta> routeMetas = metaManager.metaRoutes(dcBak2);
-		Assert.assertEquals(4, routeMetas.size());
-		routeMetas.sort((o1, o2) -> o1.getId()  - o2.getId());
-		Assert.assertEquals(new Integer(1), routeMetas.get(0).getId());
-		Assert.assertEquals(new Integer(2), routeMetas.get(1).getId());
-		Assert.assertEquals(new Integer(3), routeMetas.get(2).getId());
-		Assert.assertEquals(new Integer(4), routeMetas.get(3).getId());
+		Assert.assertEquals(7, routeMetas.size());
+		routeMetas.sort((o1, o2) -> Long.compare(o1.getId(), o2.getId()));
+		Assert.assertEquals(Long.valueOf(1), routeMetas.get(0).getId());
+		Assert.assertEquals(Long.valueOf(2), routeMetas.get(1).getId());
+		Assert.assertEquals(Long.valueOf(3), routeMetas.get(2).getId());
+		Assert.assertEquals(Long.valueOf(4), routeMetas.get(3).getId());
+		Assert.assertEquals(Long.valueOf(5), routeMetas.get(4).getId());
+		Assert.assertEquals(Long.valueOf(9), routeMetas.get(5).getId());
+		Assert.assertEquals(Long.valueOf(10), routeMetas.get(6).getId());
 
 		List<RouteMeta> routeMetas2 = metaManager.metaRoutes(dcBak1);
 		Assert.assertEquals(0, routeMetas2.size());
 	}
 
 	@Test
-	public void testRandomRoute(){
-
-		//for dcBak2 cluster1
-		ClusterMeta clusterMeta1 = metaManager.getClusterMeta(dcBak2, clusterId1);
-		Set<RouteMeta> routes = new HashSet<>();
-		for(int i=0;i<100;i++){
-			RouteMeta routeMeta = metaManager.metaRandomRoutes(dcBak2, clusterMeta1.getOrgId(), clusterMeta1.getActiveDc());
-			routes.add(routeMeta);
-			Assert.assertTrue(routeMeta.getId() >= 1 && routeMeta.getId() <=3 );
-		}
-		Assert.assertEquals(3, routes.size());
-
-
-		//for dcBak2 cluster2
-		ClusterMeta clusterMeta2 = metaManager.getClusterMeta(dcBak2, clusterId2);
-		for(int i=0;i<100;i++){
-			RouteMeta routeMeta = metaManager.metaRandomRoutes(dcBak2, clusterMeta2.getOrgId(), clusterMeta2.getActiveDc());
-			Assert.assertEquals(new Integer(4), routeMeta.getId());
-		}
-
-
-		//for dcBak1 cluster1
-		clusterMeta1 = metaManager.getClusterMeta(dcBak1, clusterId1);
-		RouteMeta routeMeta = metaManager.metaRandomRoutes(dcBak1, clusterMeta1.getOrgId(), clusterMeta1.getActiveDc());
-		Assert.assertNull(routeMeta);
-	}
-
-	@Test
-	public void testGetSpecificActiveDcClusters(){
+	public void testGetSpecificActiveDcClusters() {
 
 		List<ClusterMeta> specificActiveDcClusters1 = metaManager.getSpecificActiveDcClusters(dcBak2, dc);
 		Assert.assertEquals(2, specificActiveDcClusters1.size());
@@ -92,24 +74,22 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 		//empty test
 		List<ClusterMeta> specificActiveDcClusters3 = metaManager.getSpecificActiveDcClusters(dcBak2, "empty");
 		Assert.assertEquals(0, specificActiveDcClusters3.size());
-
-
 	}
 
 	@Test
-	public void testRandom(){
+	public void testRandom() {
 
 		int total = 100;
 		List<Integer> integers = new LinkedList<>();
-		for(int i=0;i<total;i++){
+		for (int i = 0; i < total; i++) {
 			integers.add(i);
 		}
 
 		HashMap<Integer, AtomicInteger> map = new HashMap<>();
-		for(int i=0;i<(1<<20);i++){
+		for (int i = 0; i < (1 << 20); i++) {
 			Integer random = metaManager.random(integers);
 			AtomicInteger put = map.putIfAbsent(random, new AtomicInteger(1));
-			if(put != null){
+			if (put != null) {
 				put.incrementAndGet();
 			}
 		}
@@ -120,7 +100,7 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 	}
 
 	@Test
-	public void findShard(){
+	public void findShard() {
 
 		XpipeMetaManager.MetaDesc metaDesc = metaManager.findMetaDesc(new HostPort("127.0.0.1", 8000));
 
@@ -134,23 +114,23 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 		Assert.assertEquals("cluster1", metaDesc.getClusterId());
 		Assert.assertEquals("shard1", metaDesc.getShardId());
 	}
-	
+
 	@Test
-	public void testActiveDc(){
-		
+	public void testActiveDc() {
+
 		Assert.assertEquals(dc, metaManager.getActiveDc(clusterId1, shardId));
 		Assert.assertEquals(dc, metaManager.getActiveDc(clusterId1, null));
 	}
 
 	@Test
-	public void testGetRedisMaster(){
+	public void testGetRedisMaster() {
 
 		Pair<String, RedisMeta> redisMaster = metaManager.getRedisMaster("cluster1", "shard1");
 		Assert.assertEquals("jq", redisMaster.getKey());
 	}
-	
+
 	@Test
-	public void testChangePrimaryDc(){
+	public void testChangePrimaryDc() {
 
 		String primaryDc = metaManager.getActiveDc(clusterId1, shardId);
 		Set<String> backupDcs = metaManager.getBackupDcs(clusterId1, shardId);
@@ -158,20 +138,20 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 		metaManager.primaryDcChanged(dc, clusterId1, shardId, primaryDc);
 
 		Assert.assertEquals(primaryDc, metaManager.getActiveDc(clusterId1, shardId));
-		
+
 		String newPrimary = backupDcs.iterator().next();
 
 		metaManager.primaryDcChanged(dc, clusterId1, shardId, newPrimary);
-		
+
 		Assert.assertEquals(newPrimary, metaManager.getActiveDc(clusterId1, shardId));
-		
+
 		Assert.assertTrue(metaManager.getBackupDcs(clusterId1, shardId).contains(primaryDc));
-		
+
 	}
-	
+
 	@Test
-	public void testGetSentinel(){
-		
+	public void testGetSentinel() {
+
 		SentinelMeta sentinelMeta = metaManager.getSentinel(dc, clusterId1, shardId);
 		Assert.assertEquals("127.0.0.1:17171,127.0.0.1:17171", sentinelMeta.getAddress());
 	}
@@ -200,6 +180,51 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 	}
 
 	@Test
+	public void testGetDownstreamDcs() {
+
+		Set<String> real = metaManager.getDownstreamDcs(dc, clusterHeteroId1, shardId);
+
+		logger.info("[testGetDownstreamDcs]{}", real);
+
+		Set<String> expected = new HashSet<>();
+		expected.add("oy");
+		expected.add("fra");
+		Assert.assertEquals(expected, real);
+
+		try {
+			metaManager.getDownstreamDcs(dc, randomString(), shardId);
+			Assert.fail();
+		} catch (Exception e) {
+
+		}
+	}
+
+	@Test
+	public void testGetUpstreamDc() {
+
+		String real = metaManager.getUpstreamDc(dcBak2, clusterHeteroId1, shardId);
+
+		logger.info("[testGetUpstreamDc]{}", real);
+
+		String expected = dc;
+		Assert.assertEquals(expected, real);
+
+		try {
+			metaManager.getUpstreamDc(dcBak2, randomString(), shardId);
+			Assert.fail();
+		} catch (Exception e) {
+
+		}
+	}
+
+	@Test
+	public void testDoGetAppliersNull(){
+		List<ApplierMeta> list = metaManager.doGetAppliers(dc, "111", "111");
+		Assert.assertEquals(null, list);
+	}
+
+
+	@Test
 	public void testHas() {
 
 		Assert.assertTrue(metaManager.hasCluster(dc, clusterId1));
@@ -216,8 +241,6 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 		Assert.assertFalse(metaManager.hasShard(dc, randomString(), shardId));
 
 		Assert.assertFalse(metaManager.hasShard(randomString(), clusterId1, shardId));
-
-
 	}
 
 	@Test
@@ -301,5 +324,103 @@ public class DefaultXpipeMetaManagerTest extends AbstractRedisTest {
 				Assert.assertEquals(active.getMaster(), master);
 			}
 		}
+	}
+
+	@Test
+	public void testChooseRouteOneWay() {
+		List<String> dstDcs = Lists.newArrayList("jq");
+		String currentDc = "fra";
+		RouteChooseStrategy strategy = new Crc32HashRouteChooseStrategy(RouteChooseStrategyFactory.RouteStrategyType.CRC32_HASH);
+		RouteMeta routeMeta1 = new RouteMeta().setId(1L);
+		RouteMeta routeMeta2 = new RouteMeta().setId(2L);
+		RouteMeta routeMeta3 = new RouteMeta().setId(3L);
+		RouteMeta routeMeta4 = new RouteMeta().setId(4L);
+		RouteMeta routeMeta9 = new RouteMeta().setId(9L);
+
+		//test same org-id
+		Map<String, RouteMeta> chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, null, strategy);
+		Assert.assertEquals(1, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta1, routeMeta2), clusterId1).getId(), chooseRoute.get("jq").getId());
+
+		//test default org-id
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 0, null, strategy);
+		Assert.assertEquals(1, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta4), clusterId1).getId(), chooseRoute.get("jq").getId());
+
+
+		//test cluster designated route
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, Maps.newHashMap("jq", Lists.newArrayList(routeMeta3, routeMeta9)), strategy);
+		Assert.assertEquals(1, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta3), clusterId1).getId(), chooseRoute.get("jq").getId());
+
+		//test cluster designated route wrong
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, Maps.newHashMap("jq", Lists.newArrayList(routeMeta9)), strategy);
+		Assert.assertEquals(1, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta1, routeMeta2), clusterId1).getId(), chooseRoute.get("jq").getId());
+	}
+
+	@Test
+	public void testChooseRouteBiDirection() {
+		List<String> dstDcs = Lists.newArrayList("jq", "OY");
+		String currentDc = "fra";
+		RouteChooseStrategy strategy = new Crc32HashRouteChooseStrategy(RouteChooseStrategyFactory.RouteStrategyType.CRC32_HASH);
+		RouteMeta routeMeta1 = new RouteMeta().setId(1L);
+		RouteMeta routeMeta2 = new RouteMeta().setId(2L);
+		RouteMeta routeMeta3 = new RouteMeta().setId(3L);
+		RouteMeta routeMeta4 = new RouteMeta().setId(4L);
+		RouteMeta routeMeta9 = new RouteMeta().setId(9L);
+		RouteMeta routeMeta10 = new RouteMeta().setId(10L);
+
+		//test same org-id
+		Map<String, RouteMeta> chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, null, strategy);
+		Assert.assertEquals(2, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq", "oy"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta1, routeMeta2), clusterId1).getId(), chooseRoute.get("jq").getId());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta9), clusterId1).getId(), chooseRoute.get("oy").getId());
+
+		//test default org-id
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, -1, null, strategy);
+		Assert.assertEquals(2, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq", "oy"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta4), clusterId1).getId(), chooseRoute.get("jq").getId());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta10), clusterId1).getId(), chooseRoute.get("oy").getId());
+
+
+		//test cluster designated route
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, Maps.newHashMap("oy", Lists.newArrayList(routeMeta10)), strategy);
+		Assert.assertEquals(2, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq", "oy"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta1, routeMeta2), clusterId1).getId(), chooseRoute.get("jq").getId());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta10), clusterId1).getId(), chooseRoute.get("oy").getId());
+
+		//test cluster designated route wrong
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, Maps.newHashMap("oy", Lists.newArrayList(routeMeta3)), strategy);
+		Assert.assertEquals(2, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq", "oy"), chooseRoute.keySet());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta1, routeMeta2), clusterId1).getId(), chooseRoute.get("jq").getId());
+		Assert.assertEquals(strategy.choose(Lists.newArrayList(routeMeta9), clusterId1).getId(), chooseRoute.get("oy").getId());
+
+		Map<String, List<RouteMeta>> designatedRoute = new HashMap<>();
+		designatedRoute.put("oy", Lists.newArrayList(routeMeta10, routeMeta3));
+		designatedRoute.put("jq", Lists.newArrayList(routeMeta1));
+		chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 0, designatedRoute, strategy);
+		Assert.assertEquals(2, chooseRoute.size());
+		Assert.assertEquals(Sets.newHashSet("jq", "oy"), chooseRoute.keySet());
+		Assert.assertEquals(routeMeta1.getId(), chooseRoute.get("jq").getId());
+		Assert.assertEquals(routeMeta10.getId(), chooseRoute.get("oy").getId());
+	}
+
+	@Test
+	public void testChooseRouteWithoutRoute() {
+		List<String> dstDcs = Lists.newArrayList( "oy", "fra");
+		String currentDc = "jq";
+		RouteChooseStrategy strategy = new Crc32HashRouteChooseStrategy(RouteChooseStrategyFactory.RouteStrategyType.CRC32_HASH);
+
+		Map<String, RouteMeta> chooseRoute = metaManager.chooseMetaRoutes(clusterId1, currentDc, dstDcs, 1, null, strategy);
+		Assert.assertEquals(0, chooseRoute.size());
 	}
 }
